--- a/style/less/main.less
+++ b/style/less/main.less
@@ -582,6 +582,7 @@ body {
   .body {
     display: flex;
     flex-direction: column;
+    overflow: visible;
     .section-main {
       border-bottom: .071em solid @50;
     }
